k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-app-namespace
  labels:
    name: node-app-namespace
