k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: node-app-namespace
  labels:
    app: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
